--- a/YemekMenu/.settings/org.eclipse.wst.common.component
+++ b/YemekMenu/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="YemekMenu">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="YemekMenu"/>
         <property name="java-output-path" value="/YemekMenu/build/classes"/>
     </wb-module>
